--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ header {
     width: 100%;
     height: 100vh;
     background: url('../assets/images/bg.png');
-    background-size: 150% 100%;
+    background-size: cover;
     background-repeat: no-repeat;
     background-position: 0 0;
     background-attachment: fixed;
