--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,7 @@ header {
     background-repeat: no-repeat;
     background-position: 0 0;
     background-attachment: fixed;
+    background-size: cover;
     display: flex;
     justify-content: center;
     align-items: center;
